<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffbdd4ff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/room_details"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/room_detail_lblRoom"
                android:id="@+id/lblRoom"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/lblRoomNumber"
                android:focusableInTouchMode="false"
                android:layout_alignTop="@+id/lblRoom"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/lblRoom" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/room_detail_lblSeat_Count"
                android:id="@+id/lblSeat_Count"
                android:layout_below="@+id/lblSetup"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/seat_count"
                android:layout_alignTop="@+id/lblSeat_Count"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/lblSeat_Count" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/lblSetup"
                android:text="@string/room_detail_lblSetup"
                android:layout_below="@+id/lblLecture"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/room_setup"
                android:layout_alignTop="@+id/lblSetup"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/lblSetup" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblLecture"
                android:id="@+id/lblLecture"
                android:layout_below="@+id/lblRoom"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lecture"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_alignTop="@+id/lblLecture"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/lblLecture" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#ffffffff">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/roomDetails_lblDayView"
                android:id="@+id/lblDayView"
                android:layout_gravity="center"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/roomDetails_lblBlock1"
                android:id="@+id/roomDetails_lblBlock1"
                android:layout_below="@+id/lblDayView"
                android:layout_alignParentStart="true"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/roomDetails_txtBlock1"
                android:layout_alignTop="@+id/roomDetails_lblBlock1"
                android:layout_toEndOf="@+id/roomDetails_lblBlock1"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/roomDetails_lblBlock2"
                android:id="@+id/roomDetails_lblBlock2"
                android:layout_below="@+id/roomDetails_lblBlock1"
                android:layout_alignParentStart="true"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/roomDetails_txtBlock2"
                android:layout_toEndOf="@+id/roomDetails_lblBlock2"
                android:layout_alignTop="@+id/roomDetails_lblBlock2"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/roomDetails_lblBlock3"
                android:id="@+id/roomDetails_lblBlock3"
                android:layout_below="@+id/roomDetails_lblBlock2"
                android:layout_alignParentStart="true"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/roomDetails_txtBlock3"
                android:layout_toEndOf="@+id/roomDetails_lblBlock3"
                android:layout_alignTop="@+id/roomDetails_lblBlock3"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/roomDetails_lblBlock4"
                android:id="@+id/roomDetails_lblBlock4"
                android:layout_below="@+id/roomDetails_lblBlock3"
                android:layout_alignParentStart="true"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/roomDetails_txtBlock4"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/roomDetails_lblBlock4"
                android:layout_alignTop="@+id/roomDetails_lblBlock4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/roomDetails_lblBlock5"
                android:id="@+id/roomDetails_lblBlock5"
                android:layout_below="@+id/roomDetails_lblBlock4"
                android:layout_alignParentStart="true"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/roomDetails_txtBlock5"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/roomDetails_lblBlock5"
                android:layout_alignTop="@+id/roomDetails_lblBlock5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/roomDetails_lblBlock6"
                android:id="@+id/roomDetails_lblBlock6"
                android:layout_below="@+id/roomDetails_lblBlock5"
                android:layout_alignParentStart="true"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/roomDetails_txtBlock6"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/roomDetails_lblBlock6"
                android:layout_alignTop="@+id/roomDetails_lblBlock6" />

        </RelativeLayout>
    </LinearLayout>
</FrameLayout>